# CodeInsightAi

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
codeinsight-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  eval_report_1784456960.json  eval_report_1784457034.json  pyproject.toml
codeinsight-backend/alembic/: __init__.py  env.py  script.py.mako
codeinsight-backend/alembic/versions/: 20260709_001_initial_schema.py  20260709_002_add_structure_tables.py  20260709_003_fix_snapshot_fk.py  20260709_004_add_files_unique_constraint.py  20260710_005_add_perf_indexes.py  20260714_006_fix_repo_status_constraint.py  20260715_007_phase1_framework_enhancement.py  20260719_008_sync_embedding_dimension.py
codeinsight-backend/codeinsight/: __init__.py  auth.py  config.py  exceptions.py  main.py
codeinsight-backend/codeinsight/agents/: __init__.py  (+3 more)
codeinsight-backend/scripts/: export_openapi.py  seed_test_data.py
codeinsight-backend/tasks/: __init__.py
codeinsight-backend/tests/: test_agent_bridge.py  test_agents.py  test_analysis_tasks.py  test_analysis_tasks_incremental.py  test_analysis_versions.py  test_ast_nodes_api.py  test_call_graph.py  test_evaluation.py  test_evaluation_v2.py  test_files.py  test_git_scanner.py  test_health.py  test_incremental_analyzer.py  test_knowledge_points.py  test_language_detector.py  test_llm_client.py  test_module_graph.py  test_prompt_format.py  test_prompt_registry.py  test_repositories.py  test_snapshot_manager.py  test_structure_pipeline.py
(+298 files in other folders)
